--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
-    "@google/generative-ai": "^0.11.0"
+    "@google/generative-ai": "0.11.0"
   }
 }
