--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,10 @@
   "theme_color": "#0084ff",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3774/3774299.png",
+      "src": "amigofiel.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
+
 }
